--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="content">Loading...</div>
-    <script src="obfuscated.js">
+    <script src="loadcontent.js">
 </script>
 </body>
 </html>
