--- a/Alighinanew/index.html
+++ b/Alighinanew/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="content">Loading...</div>
-    <script src="loadcontent.js">
+    <script src="obfuscated.js">
 </script>
 </body>
 </html>
