--- a/Alighinanew/index.html
+++ b/Alighinanew/index.html
@@ -7,13 +7,7 @@
 </head>
 <body>
     <div id="content">Loading...</div>
-    <script src="obfuscated.js">
-        document.addEventListener('contextmenu', event => event.preventDefault());
-document.addEventListener('keydown', function (e) {
-    if (e.key === 'F12' || (e.ctrlKey && e.shiftKey && e.key === 'I')) {
-        e.preventDefault();
-    }
-});
+    <script src="loadcontent.js">
 
 </script>
 </body>
