--- a/Alighinanew/content.html
+++ b/Alighinanew/content.html
@@ -168,7 +168,7 @@
     لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً
 </p>
         <h1 class="decorative">Ali & Ghina</h1>
-        <p class="subtitle">Cordially Invite You To Join The Occasion Of Their Joyous Commitment On</p>
+        <p class="subtitle"> Invite You To Join The Occasion Of Their Joyous Commitment On</p>
         
         <div class="date-box">
             <div>Tuesday</div>
