--- a/Alighinav4/content.html
+++ b/Alighinav4/content.html
@@ -187,6 +187,12 @@
 		
 		<p class="subtitle"><br>نوماً هنيئاً لأطفالكم</p>
 		<p class="subtitle">(1)عدد الاشخاص</p>
+	       <label for="guestName">Please enter your name:</label>
+<input type="text" id="guestName" placeholder="Your Name" required>
+<br><br>
+<button id="yesButton">I will attend</button>
+<button id="noButton">I can't attend</button>
+
 		 <!-- RSVP Section -->
     <div class="rsvp-section">
         <h2 class="subtitle">Will you be attending?</h2>
