--- a/Alighinav4/content.html
+++ b/Alighinav4/content.html
@@ -177,7 +177,7 @@
         </div>
         
         <p class="details">Saida</p>
-        <p class="details"><i>Al Mokhtar Restaurant</i></p>
+        <p class="details"><i>Al Mokhtar</i></p>
 		<p class="location"><a class="location-link" 
            href="https://maps.app.goo.gl/JbtH78bb3L4jLQWE9" 
            target="_blank">
