--- a/Alighinav10/content.html
+++ b/Alighinav10/content.html
@@ -204,7 +204,8 @@
             const days = Math.floor(difference / (1000 * 60 * 60 * 24));
             document.getElementById("countdown").innerHTML = `Countdown: ${days} days to go!`;
         }
-		
+	setInterval(updateCountdown, 1000);
+        updateCountdown();	
 		</script>
 </body>
 </html>
