Update weddinginviationalighinanew2 - Copy.html

--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -42,7 +42,7 @@
             border-right: 3px solid #d6cbd3;
     }
 	.left h1 {
-            font-size: 15px;
+            font-size: 13px;
             margin: 0;
             color: #4a235a;
     }
@@ -213,7 +213,7 @@
             </div>
 		</div>
 		 <div class="right">
-            <img src="https://i.imgur.com/skuDgWo.png" alt="Wedding Couple">
+            <img src="https://i.imgur.com/OKBqhL7.jpeg" alt="Wedding Couple">
         </div>
 	</div>
 	
