--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -152,7 +152,7 @@
             line-height: 1;
         }	
 		.right {
-		width: 70%;
+		width: 80%;
 		overflow: hidden;
 		position: relative;
         }
@@ -185,7 +185,7 @@
 		 <p id="aya">وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَاجًا<br> 
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
-         <p>تتشرف</p>
+         <p> vhjhj تتشرف</p>
          <p>عائلة السيد الأستاذ سامي بركات &nbsp; و &nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p>بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
