--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -31,7 +31,7 @@
             margin: 5px 0;
     }
 	.left {
-            width: 50%;
+            width: 40%;
             text-align: center;
             padding: 40px;
             display: flex;
@@ -185,7 +185,7 @@
 		 <p id="aya">وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَاجًا<br> 
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
-         <p> vhjhj تتشرف</p>
+         <p> تتشرف</p>
          <p>عائلة السيد الأستاذ سامي بركات &nbsp; و &nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p>بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
