Update weddinginviationalighinanew2 - Copy.html

--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -6,13 +6,15 @@
     <title>Wedding Invitation</title>
 	<style>
     .card {
-            display: flex;
-            width: 430px;
-            background: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
-            overflow: hidden;
-    }
+    display: flex;
+    width: 90%; /* Adjusts to 90% of the screen width */
+    max-width: 430px; /* Prevents it from exceeding 430px on larger screens */
+    background: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 0 auto; /* Centers the card on the screen */
+}
 	#aya { 
     font-size: 1em; /* Increased font size */
     letter-spacing: 1px;
