Update weddinginviationalighinanew2 - Copy.html

--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -206,7 +206,7 @@
             <p class="aya">نوماً هنيئاً لأطفالكم</p>
 		</div>
 		 <div class="right">
-            <img src="https://i.imgur.com/OKBqhL7.jpeg" alt="Wedding Couple">
+            <img src="https://i.imgur.com/oX8AZaQ.jpeg" alt="Wedding Couple">
         </div>
 	</div>
 	
