Update weddinginviationalighinanew2 - Copy.html

--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -50,6 +50,7 @@
     }
 	.date-box {
             background: #d6cbd3;
+	    width:160px;
             color: white;
             padding: 10px;
             margin: 15px 0;
@@ -195,7 +196,7 @@
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
          <div class="date-box">
             <div>٨ مساءً</div>
-            <div>١٠<strong> , حزيران</strong> , ٢٠٢٥</div>
+            <div>١٠<strong> , حزيران</strong></div>
             <div>الثّلاثاء</div>
         </div>
 		<img src="sala.png" alt="Flower Decoration" class="alighinanames">
