--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -190,7 +190,7 @@
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 		<p> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
 		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
-         <p>  تتشرف</p>
+         <p>   ghina تتشرف</p>
          <p>عائلة السيد الأستاذ سامي بركات &nbsp; و &nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p>بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
@@ -200,10 +200,14 @@
             <div>الثّلاثاء</div>
         </div>
 		<img src="sala.png" alt="Flower Decoration" class="alighinanames">
-            <p class="location"><a class="location-link" 
+              <p class="location"><a class="location-link" 
            href="https://maps.app.goo.gl/JbtH78bb3L4jLQWE9" 
            target="_blank">
-          Google هنا ننتظركم بحب – شاهد الموقع على خرائط
+         <svg width="120" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <path d="M12 2C8.13 2 5 5.13 5 9c0 4.68 5.81 11.24 6.05 11.5.29.31.78.31 1.06 0C13.19 20.24 19 13.68 19 9c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z" fill="black"/>
+</svg>
+ ننتظركم – شاهد الموقع على خرائط Google</a>
+
         </a></p>
             <p id="countdown" class="countdown" ></p>
             <p class="aya">نوماً هنيئاً لأطفالكم</p>
