Update weddinginviationalighinanew2 - Copy.html

--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -49,7 +49,9 @@
             color: #4a235a;
     }
 	.date-box {
-            background: #d6cbd3;
+          /*  background: #d6cbd3;*/
+		 box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            border: 1px solid #fdf8f6;
 	    width:120px;
             color: white;
             padding: 10px;
