Update weddinginviationalighinanew2 - Copy.html

--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -62,7 +62,7 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            background: #d6cbd3;
+          /*  background: #d6cbd3;*/
             padding: 10px;
             border-radius: 10px;
             margin: 10px 0;
