Update weddinginviationalighinanew2 - Copy.html

--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -15,6 +15,12 @@
     overflow: hidden;
     margin: 0 auto; /* Centers the card on the screen */
 }
+		#ayle {
+	font-size: 0.75em;
+	}
+	#zafaf {
+	font-size: 0.6em;
+	}
 	#aya { 
     font-size: 0.6em; /* Increased font size */
     letter-spacing: 1px;
@@ -241,8 +247,8 @@
 		<p> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
 		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
          <p>   ghina تتشرف</p>
-         <p>عائلة السيد الأستاذ سامي بركات &nbsp; و &nbsp; عائلة المرحوم الحاج حسن سعد</p>
-         <p>بدعوتكم لحضور زفاف ولديهما</p>
+         <p id="ayle">عائلة السيد الأستاذ سامي بركات</p> و <br><p id="ayle"> &nbsp; عائلة المرحوم الحاج حسن سعد</p>
+         <p id="zafaf">بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
          <div class="date-box">
             <div>٨ مساءً</div>
