--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -88,8 +88,8 @@
 	}
 	.location-link {
            font-size: 1em;
-            background: #d6cbd3;
-            color: white;
+          /*  background: #d6cbd3;*/
+            color: #4a235a;
             padding: 5px;
             border-radius: 10px;
             display: inline-block;
