Update weddinginviationalighinanew2 - Copy.html

--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -235,6 +235,10 @@
             width: 18px;
             text-align: center;
         }
+		.sala {
+	width: 100px;
+	 margin: 0 auto 10px; 
+	}
 	</style>
 </head>
 <body>
@@ -255,7 +259,7 @@
             <div>١٠<strong> , حزيران</strong></div>
             <div>الثّلاثاء</div>
         </div>
-		<img src="sala.png" alt="Flower Decoration" class="alighinanames">
+		<img src="https://i.imgur.com/BCQrEtk.png" alt="Flower Decoration" class="sala">
               <p class="location"><a class="location-link" 
            href="https://maps.app.goo.gl/JbtH78bb3L4jLQWE9" 
            target="_blank">
