--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -59,7 +59,7 @@
 		 box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             border: 1px solid #fdf8f6;
 	    width:120px;
-            color: white;
+            color: #412649;
             padding: 10px;
             margin: 15px 0;
             border-radius: 5px;
