Update weddinginviationalighinanew2 - Copy.html

--- a/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanew2 - Copy.html
@@ -73,7 +73,7 @@
             border-radius: 10px;
             margin: 10px 0;
             animation: zoomIn 2s ease-in-out;
-			color: white;
+			color: #412649;
     }
 	.date-box div {
             font-size: 0.5em;
