--- a/Alighinav10 - Copy/weddinginviationalighinanimation.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanimation.html
@@ -332,7 +332,7 @@
             <p class="aya">نوماً هنيئاً لأطفالكم</p>
 		</div>
 		 <div class="right">
-		  <img src="agimg1.jpeg" alt="Wedding Couple">
+		  <img src="https://i.imgur.com/oX8AZaQ.jpeg" alt="Wedding Couple">
         </div>
 	</div>
 	
