--- a/Alighinav10 - Copy/weddinginviationalighinanimation.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanimation.html
@@ -282,7 +282,7 @@
 <body>
     <div class="card">
         <div class="left">
-		 <img src="logo.png" alt="Flower Decoration" class="flower">
+		 <img src="https://i.imgur.com/6jR8uUc.png" alt="Flower Decoration" class="flower">
 		 <p> ﷽</p>
 		 <p id="aya">وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَاجًا<br> 
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
