--- a/Alighinav10 - Copy/weddinginviationalighinanimation.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanimation.html
@@ -41,14 +41,14 @@
             margin: 5px 0;
     }
 	.left {
-            width: 30%;
+            width: 0%;
             text-align: center;
-            padding: 30px;
+           /* padding: 30px;*/
             display: flex;
             flex-direction: column;
             justify-content: center;
             border-right: 3px solid #d6cbd3;
-			transition: width 1.5s ease-in-out 6s; /* Expands left when right disappears */
+			transition: width 1s ease-in-out 6s; /* Expands left when right disappears */
 			
     }
 
@@ -177,7 +177,7 @@
             line-height: 1;
         }	
 		.right {
-    width: 70%;
+    width: 100%;
     
     position: relative;
   /*   transition: filter 1.5s ease-in-out 6s;*/ /* Apply shadow effect after 6s */
