--- a/Alighinav10 - Copy/testimg.html
+++ b/Alighinav10 - Copy/testimg.html
@@ -34,7 +34,7 @@
 <body>
 
     <div class="image-container">
-        <img src="agimg2.jpeg" alt="Wedding Image">
+        <img src="https://i.imgur.com/oX8AZaQ.jpeg" alt="Wedding Image">
     </div>
 
 </body>
