--- a/Alighinav10 - Copy/weddinginviationalighinanimation.html
+++ b/Alighinav10 - Copy/weddinginviationalighinanimation.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedding Invitation</title>
 	<style>
+		/* Remove margins & padding */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
     .card {
     display: flex;
     width: 95%; /* Adjusts to 90% of the screen width */
@@ -177,16 +183,22 @@
             line-height: 1;
         }	
 		.right {
-    width: 100%;
-    
+    width: 100vw;
+            height: 100vh;
+            display: flex;
+			justify-content: center;
+            align-items: center;
+            overflow: hidden;
+            background-color: #000;
     position: relative;
   /*   transition: filter 1.5s ease-in-out 6s;*/ /* Apply shadow effect after 6s */
 	  transition: width 1.5s ease-in-out 6s; /* Expands left after 6s */
 }
 		.right img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 100vw;
+            height: 100vh;
+            object-fit: cover;
+   /* object-fit: cover;*/
     position: absolute;
     top: 0;
     left: 0;
@@ -288,7 +300,7 @@
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
 		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
-         <p> vhjhj تتشرف</p>
+         <p> تتشرف</p>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات</p> و <br><p id="ayle"> &nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
