--- a/ghinali/weddinginviationalighinanimation - Copy.html
+++ b/ghinali/weddinginviationalighinanimation - Copy.html
@@ -306,8 +306,8 @@
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
 		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
-         <p> hjkjkj تتشرف</p>
-         <p id="ayle">عائلة السيد الأستاذ سامي بركات</p> و <br><p id="ayle"> &nbsp; عائلة المرحوم الحاج حسن سعد</p>
+         <p> تتشرف</p>
+         <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
 		 <p>
@@ -316,18 +316,18 @@
             <div>١٠<strong> , حزيران</strong></div>
             <div>الثّلاثاء</div>
         </div></p>
+		 <svg width="120" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <path d="M12 2C8.13 2 5 5.13 5 9c0 4.68 5.81 11.24 6.05 11.5.29.31.78.31 1.06 0C13.19 20.24 19 13.68 19 9c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z" fill="black"/>
+</svg>
 		<img src="salanew21.png" alt="Flower Decoration" class="sala">
             <p class="location"><a class="location-link" 
            href="https://maps.app.goo.gl/JbtH78bb3L4jLQWE9" 
            target="_blank">
-         <svg width="120" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-  <path d="M12 2C8.13 2 5 5.13 5 9c0 4.68 5.81 11.24 6.05 11.5.29.31.78.31 1.06 0C13.19 20.24 19 13.68 19 9c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z" fill="black"/>
-</svg>
  ننتظركم – شاهد الموقع على خرائط Google</a>
 
         </a></p>
              <div class="countdown-container">
-        <div class="countdown-title">!العد التنازلي ليومنا الكبير</div>
+        <div class="countdown-title">Countdown to our big day!</div>
         <div class="countdownnew">
             <div>
                 <span id="days">00</span>
