--- a/ghinali/weddinginviationalighinanimation - Copy.html
+++ b/ghinali/weddinginviationalighinanimation - Copy.html
@@ -247,7 +247,7 @@
           /*  background: #fdf8f6;*/
             border-radius: 5px;
             padding: 2px;
-            width: 120px; /* Small width */
+            width: 140px; /* Small width */
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             border: 1px solid #fdf8f6;
             position: relative;
@@ -259,6 +259,7 @@
             font-size: 10px;
             font-weight: bold;
             color: #412649;
+	   text-align: center;
             margin-bottom: 5px;
         }
 
