Update weddinginviationalighinanimation - v2.html

--- a/ghinali/weddinginviationalighinanimation - v2.html
+++ b/ghinali/weddinginviationalighinanimation - v2.html
@@ -418,7 +418,7 @@
     </div>
     
     <p class="label1">نوماً هنيئاً لأطفالكم</p>
-</div>
+</div></div>
 
 		 <div class="right">
 		  <img src="agimg1.jpeg" alt="Wedding Couple">
