Update weddinginviationalighinanimation - v2.html

--- a/ghinali/weddinginviationalighinanimation - v2.html
+++ b/ghinali/weddinginviationalighinanimation - v2.html
@@ -320,11 +320,9 @@
         border: 1px solid #ccc;
         border-radius: 5px;
         padding: 5px;
+	    -moz-appearance: textfield; /* Firefox */
     }
-/* Show arrows in number input on mobile */
-#guestCount {
-    -moz-appearance: textfield; /* Firefox */
-}
+
 
 #guestCount::-webkit-inner-spin-button,
 #guestCount::-webkit-outer-spin-button {
@@ -369,7 +367,7 @@
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya1"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
 		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
-         <p id="ayle"> hjgjj تتشرف</p>
+         <p id="ayle"> تتشرف</p>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
