--- a/ghinali/weddinginviationalighinanimation - v2.html
+++ b/ghinali/weddinginviationalighinanimation - v2.html
@@ -259,7 +259,7 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             border: 1px solid #fdf8f6;
             position: relative;
-            margin: 30px auto;
+            margin: 10px auto;
             font-size: 8px;
         }
 
@@ -366,7 +366,7 @@
 		 <p id="aya">وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَاجًا<br> 
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya1"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
-		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
+		 <h1>hghgحضرة السّيد الدّكتور يحيى طاهر</h1>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">يتشرفوا بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
