Update weddinginviationalighinanimation - v2.html

--- a/ghinali/weddinginviationalighinanimation - v2.html
+++ b/ghinali/weddinginviationalighinanimation - v2.html
@@ -108,7 +108,7 @@
     width: 120px; /* Adjust size as needed */
 	/*height: auto; */
     display: block;
-    margin: 0 auto 10px; /* Centers the image and adds spacing below */
+    margin: 0 auto 2px; /* Centers the image and adds spacing below */
     animation: fadeIn 2s ease-in-out;
 	}
 	.sala {
@@ -383,7 +383,7 @@
             <p class="location"><a class="location-link" 
            href="https://maps.app.goo.gl/JbtH78bb3L4jLQWE9" 
            target="_blank">
- ننتظركم – شاهد الموقع على خرائط Google</a>
+Google ننتظركم – شاهد الموقع على خرائط </a>
 
         </a></p>
              <div class="countdown-container">
