Update weddinginviationalighinanimation - v2.html

--- a/ghinali/weddinginviationalighinanimation - v2.html
+++ b/ghinali/weddinginviationalighinanimation - v2.html
@@ -366,7 +366,7 @@
 		 <p id="aya">وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَاجًا<br> 
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya1"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
-		 <h1>hghgحضرة السّيد الدّكتور يحيى طاهر</h1>
+		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">يتشرفوا بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
