--- a/ghinali/weddinginviationalighinanimation - v2.html
+++ b/ghinali/weddinginviationalighinanimation - v2.html
@@ -86,7 +86,7 @@
             border: 1px solid #fdf8f6;
             color: white;
             padding: 10px;
-            margin: 10px 0;
+            margin: 0px 0;
             border-radius: 3px;
     }
 	.date-box {
@@ -96,7 +96,7 @@
           /*  background: #d6cbd3;*/
             padding: 10px;
             border-radius: 10px;
-            margin: 10px 0;
+            margin: 0px 0;
             animation: zoomIn 2s ease-in-out;
 			color: #412649;
     }
@@ -366,7 +366,7 @@
 		 <p id="aya">وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَاجًا<br> 
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya1"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
-		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
+		 <h1>lkjllحضرة السّيد الدّكتور يحيى طاهر</h1>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">يتشرفوا بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
