--- a/ghinali/weddinginviationalighinanimation - v2.html
+++ b/ghinali/weddinginviationalighinanimation - v2.html
@@ -48,6 +48,9 @@
     display: block;
     margin: 0 auto 5px; /* Centers the image and adds spacing below */
     animation: fadeIn 2s ease-in-out;
+		display: block; /* Remove extra space caused by inline images */
+    margin: 0; /* Remove default margin */
+    padding: 0; /* Remove default padding */
 	}
 	.left p {
             font-size: 12px;
@@ -366,7 +369,7 @@
 		 <p id="aya">وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَاجًا<br> 
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya3"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
-		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
+		 <h1>klkloiioioحضرة السّيد الدّكتور يحيى طاهر</h1>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">يتشرفوا بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
