Update weddinginviationalighinanimation - v2.html

--- a/ghinali/weddinginviationalighinanimation - v2.html
+++ b/ghinali/weddinginviationalighinanimation - v2.html
@@ -15,6 +15,7 @@
     display: flex;
     width: 95%; /* Adjusts to 90% of the screen width */
     max-width: 430px; /* Prevents it from exceeding 430px on larger screens */
+	    height:844px;
     background: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
