Update weddinginviationalighinanimation - v2.html

--- a/ghinali/weddinginviationalighinanimation - v2.html
+++ b/ghinali/weddinginviationalighinanimation - v2.html
@@ -11,10 +11,16 @@
             padding: 0;
             box-sizing: border-box;
         }
+		html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* Prevents scrolling */
+}
     .card {
     display: flex;
     width: 95%; /* Adjusts to 90% of the screen width */
-	    height:90%;
+	   height: 100vh; /* Makes it fit the full screen height */
     max-width: 430px; /* Prevents it from exceeding 430px on larger screens */
 	    height:844px;
     background: #fff;
@@ -371,7 +377,7 @@
 		 <p id="aya">وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَاجًا<br> 
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya3"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
-		 <h1>ttttttحضرة السّيد الدّكتور يحيى طاهر</h1>
+		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">يتشرفوا بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
