--- a/ghinali/weddinginviationalighinanimation - v2.html
+++ b/ghinali/weddinginviationalighinanimation - v2.html
@@ -54,7 +54,7 @@
 	.flower {
     width: 80px; /* Adjust size as needed */
     display: block;
-    margin: 0 auto 0px; /* Centers the image and adds spacing below */
+    margin: 0 auto 5px; /* Centers the image and adds spacing below */
     animation: fadeIn 2s ease-in-out;
 		display: block; /* Remove extra space caused by inline images */
     margin: 0; /* Remove default margin */
@@ -377,7 +377,7 @@
 		 <p id="aya">وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَاجًا<br> 
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya3"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
-		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
+		 <h1>sssssssssssحضرة السّيد الدّكتور يحيى طاهر</h1>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">يتشرفوا بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
