--- a/ghinali/weddinginviationalighinanimation - v4.html
+++ b/ghinali/weddinginviationalighinanimation - v4.html
@@ -426,7 +426,7 @@
         </svg>
         <p class="label1">70506242</p>
     </div>
-    <p class="label1">(٢)عدد الأشخاص</p>
+    <p class="label1">)٢(عدد الأشخاص</p>
     <p class="label1">نوماً هنيئاً لأطفالكم</p>
 </div></div>
 
