Update weddinginviationalighinanimation - v4.html

--- a/ghinali/weddinginviationalighinanimation - v4.html
+++ b/ghinali/weddinginviationalighinanimation - v4.html
@@ -354,6 +354,18 @@
         align-items: center;
         gap: 10px; /* Adjust spacing between phone and text */
     }
+		.phone-input {
+    display: flex;
+    align-items: center; /* Aligns the items vertically in the middle */
+}
+
+.phone-input svg {
+    margin-right: 10px; /* Adds some space between the icon and the phone number */
+}
+
+.phone-input p {
+    margin: 0; /* Removes any default margin that might cause spacing issues */
+}
 	.aya3 {
         font-size: 6px;
         color: #555;
@@ -426,7 +438,7 @@
         </svg>
         <p class="label1">70506242</p>
     </div>
-    <p class="label1">)٢(عدد الأشخاص</p>
+    <p class="label1">(٢)عدد الأشخاص</p>
     <p class="label1">نوماً هنيئاً لأطفالكم</p>
 </div></div>
 
