--- a/ghinali/weddinginviationalighinanimation - v4.html
+++ b/ghinali/weddinginviationalighinanimation - v4.html
@@ -386,7 +386,7 @@
 		 <p id="aya">وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَاجًا<br> 
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya3"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
-		 <h1>ggggggggggggحضرة السّيد الدّكتور يحيى طاهر</h1>
+		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">يسرّهم دعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
@@ -438,8 +438,8 @@
         </svg>
         <p class="label1">70506242</p>
     </div>
-    <p class="label1">(2) عدد الأشخاص</p>
-    <p class="label1">نوماً هنيئاً لأطفالكم</p>
+    <p class="label1"> &nbsp;(2) عدد الأشخاص</p>
+    <p class="label1"> &nbsp;نوماً هنيئاً لأطفالكم</p>
 </div></div>
 
 		 <div class="right">
