--- a/ghinali/weddinginviationalighinanimation - v4.html
+++ b/ghinali/weddinginviationalighinanimation - v4.html
@@ -381,12 +381,12 @@
   </audio>
     <div class="card">
         <div class="left">
-		 <img src="logo1.png" alt="Flower Decoration" class="flower"  style="margin-bottom: 20px;">
+		 <img src="logo1.png" alt="Flower Decoration" class="flower"  style="margin-top: 0px;">
 		 <p id="aya1"> ﷽</p>
 		 <p id="aya">وَمِنْ آيَاتِهِ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَاجًا<br> 
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya3"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
-		 <h1>aaaaaaaaحضرة السّيد الدّكتور يحيى طاهر</h1>
+		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">يسرّهم دعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
