Update weddinginviationalighinanimation - v5.html

--- a/ghinali/weddinginviationalighinanimation - v5.html
+++ b/ghinali/weddinginviationalighinanimation - v5.html
@@ -368,14 +368,13 @@
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya1"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
 		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
-         <p id="ayle"> تتشرف</p>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
-         <p id="zafaf">بدعوتكم لحضور زفاف ولديهما</p>
+         <p id="zafaf">يسرّهم دعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
 		 <p>
          <div class="date-box">
             <div>٨ مساءً</div>
-            <div>١٠<strong> , حزيران</strong></div>
+             <div>١٠<strong>, حزيران &nbsp; </strong><strong> , &nbsp;٢٠٢٥</strong></div>
             <div>الثّلاثاء</div>
         </div></p>
 		<svg width="120" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
