--- a/ghinali/weddinginviationalighinanimation - v11.html
+++ b/ghinali/weddinginviationalighinanimation - v11.html
@@ -409,21 +409,22 @@
             </div>
         </div>
     </div>
-<div class="form-group">
-    <div class="counter-container">
-        <button type="button" id="decrement">-</button>
-        <input type="number" id="guestCount" min="0" max="3" value="1" readonly>
-        <button type="button" id="increment">+</button>
-    </div>
-	 <label for="guestCount" class="label1">:عدد الضيوف الذين سيشاركوننا فرحتنا </label>
-</div>
-
 <div class="button-container">
     <button id="noButton">عذراً، لا أستطيع الحضور</button>
     <button id="yesButton">!سأحضر للاحتفال معكم</button>
 </div>
 			
-            <p class="aya">نوماً هنيئاً لأطفالكم</p>
+<div class="phone">
+    <div class="phone-input">
+        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.42 19.42 0 0 1-6-6A19.79 19.79 0 0 1 2.1 4.18 2 2 0 0 1 4 2h3a2 2 0 0 1 2 1.72 12.05 12.05 0 0 0 .63 2.7 2 2 0 0 1-.45 2.11L8 10a16 16 0 0 0 6 6l1.5-1.5a2 2 0 0 1 2.11-.45 12.05 12.05 0 0 0 2.7.63 2 2 0 0 1 1.72 2z"/>
+        </svg>
+        <p class="label1">70506242</p>
+    </div>
+    
+    <p class="label1">(٢)عدد الأشخاص</p>
+    <p class="label1">نوماً هنيئاً لأطفالكم</p>
+</div>
 </div>
 
 		 <div class="right">
