Update weddinginviationalighinanimation - v11.html

--- a/ghinali/weddinginviationalighinanimation - v11.html
+++ b/ghinali/weddinginviationalighinanimation - v11.html
@@ -353,6 +353,28 @@
         border-radius: 5px;
         padding: 5px;
     }
+			.phone {
+        display: flex;
+        align-items: center;
+        gap: 10px; /* Adjust spacing between phone and text */
+    }
+	.phone-input {
+    display: flex;
+    align-items: center; /* Aligns the items vertically in the middle */
+}
+
+.phone-input svg {
+    margin-right: 10px; /* Adds some space between the icon and the phone number */
+}
+
+.phone-input p {
+    margin: 0; /* Removes any default margin that might cause spacing issues */
+}
+	.aya3 {
+        font-size: 6px;
+        color: #555;
+        margin: 0;
+    }
 	</style>
 </head>
 <body>
