--- a/ghinali/weddinginviationalighinanimation - v11.html
+++ b/ghinali/weddinginviationalighinanimation - v11.html
@@ -259,7 +259,7 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             border: 1px solid #fdf8f6;
             position: relative;
-            margin: 30px auto;
+            margin: 10px auto;
             font-size: 8px;
         }
 
@@ -390,7 +390,7 @@
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya1"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
 		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
-         <p id="ayle"> تتشرف</p>
+         <p id="ayle"> kllklklتتشرف</p>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
