Update weddinginviationalighinanimation - v11.html

--- a/ghinali/weddinginviationalighinanimation - v11.html
+++ b/ghinali/weddinginviationalighinanimation - v11.html
@@ -357,6 +357,7 @@
         display: flex;
         align-items: center;
         gap: 10px; /* Adjust spacing between phone and text */
+	margin: 10px auto;
     }
 	.phone-input {
     display: flex;
@@ -390,7 +391,7 @@
             لِّتَسْكُنُوا إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً</p>
 			<p id="aya1"> ڝــدڦــﷲ ﷻ ا̍ڸــ؏ــڟــﯧْۧــمۘ</p>
 		 <h1>حضرة السّيد الدّكتور يحيى طاهر</h1>
-         <p id="ayle"> kllklklتتشرف</p>
+         <p id="ayle"> تتشرف</p>
          <p id="ayle">عائلة السيد الأستاذ سامي بركات &nbsp; و&nbsp; عائلة المرحوم الحاج حسن سعد</p>
          <p id="zafaf">بدعوتكم لحضور زفاف ولديهما</p>
          <img src="alighinanamesnew33.png" alt="Flower Decoration" class="alighinanames">
