--- a/ghinali/weddinginviationalighinanimation - v11.html
+++ b/ghinali/weddinginviationalighinanimation - v11.html
@@ -159,18 +159,12 @@
             text-align: center;
             font-size: 6px;
     }
-	.button-container {
-            display: flex;
-            justify-content: center;
-            gap: 5px;
-            margin-top: 5px;
-        }
         button {
-            background: #a586a6;
-            color: white;
+        /*    background: #a586a6;*/
+            color: #4a235a;
             border: none;
             padding: 7px 12px;
-            border-radius: 5px;
+            border-radius: 1px;
             cursor: pointer;
             font-size: 30px;
         }
