--- a/ghinali/weddinginviationalighinanimation - v11.html
+++ b/ghinali/weddinginviationalighinanimation - v11.html
@@ -167,7 +167,7 @@
             border-radius: 1px;
             cursor: pointer;
             font-size: 30px;
-		margin: 20px;
+		margin-bottom: 20px;
         }
         button:hover {
             background: #c2a3c2;
