--- a/ghinali/weddinginviationalighinanimation - v13.html
+++ b/ghinali/weddinginviationalighinanimation - v13.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+<!-- Open Graph meta tags for WhatsApp/LinkedIn/Facebook previews -->
+<meta property="og:title" content="Ali & Ghina Wedding Invitation">
+<meta property="og:description" content="You're invited to celebrate with us! Click to view the invitation and details.">
+<meta property="og:image" content="https://yourusername.github.io/wedding-invitation/agimg3.jpeg">
+<meta property="og:url" content="https://yourusername.github.io/wedding-invitation/">
+<meta name="twitter:card" content="summary_large_image">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedding Invitation</title>
 	<style>
