Update weddinginviationalighinanimation - v13.html

--- a/ghinali/weddinginviationalighinanimation - v13.html
+++ b/ghinali/weddinginviationalighinanimation - v13.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<!-- Open Graph meta tags for WhatsApp/LinkedIn/Facebook previews -->
+<!-- Open Graph Meta Tags for WhatsApp Preview -->
 <meta property="og:title" content="Ali & Ghina Wedding Invitation">
-<meta property="og:description" content="You're invited to celebrate with us! Click to view the invitation and details.">
-<meta property="og:image" content="https://yourusername.github.io/wedding-invitation/agimg3.jpeg">
-<meta property="og:url" content="https://yourusername.github.io/wedding-invitation/">
+<meta property="og:description" content="You're invited to celebrate the wedding of Ali & Ghina. Tap to view the full invitation!">
+<meta property="og:image" content="https://ghenaa.github.io/ALighina/ghinali/agimg3.jpeg">
+<meta property="og:url" content="https://ghenaa.github.io/ALighina/ghinali/weddinginviationalighinanimation%20-%20v13.html">
 <meta name="twitter:card" content="summary_large_image">
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedding Invitation</title>
