Update weddinginviationalighinanimation - v14.html

--- a/ghinali/weddinginviationalighinanimation - v14.html
+++ b/ghinali/weddinginviationalighinanimation - v14.html
@@ -4,7 +4,7 @@
 <!-- Open Graph Meta Tags for WhatsApp Preview -->
 <meta property="og:title" content="Ali & Ghina Wedding Invitation">
 <meta property="og:description" content="You're invited to celebrate the wedding of Ali & Ghina. Tap to view the full invitation!">
-<meta property="og:image" content="https://ghenaa.github.io/ALighina/ghinali/preview.jpg">
+<meta property="og:image" content="https://ghenaa.github.io/ALighina/ghinali/agimg3.jpeg">
 <meta property="og:url" content="https://ghenaa.github.io/ALighina/ghinali/weddinginviationalighinanimation%20-%20v14.html">
 <meta name="twitter:card" content="summary_large_image">
 
