--- a/ghinali/index.html
+++ b/ghinali/index.html
@@ -10,11 +10,11 @@
 	
 	<meta property="og:title" content="Ali & Ghina Wedding Invitation">
 <meta property="og:description" content="You're invited to celebrate with us. Tap to view the full invitation!">
-<meta property="og:image" itemprop="image" content="https://i.imgur.com/1cGIade.jpeg">
+<meta property="og:image" itemprop="image" content="https://ghenaa.github.io/ALighina/ghinali/preview.jpg">
 <meta property="og:url" content="https://ghenaa.github.io/ALighina/ghinali/">
 <meta property="og:type" content="article" />
 <meta property="og:locale" content="en_GB" />
- <div id='hidden' style='display:none;'><img src="https://i.imgur.com/1cGIade.jpeg"></div>
+ <div id='hidden' style='display:none;'><img src="https://ghenaa.github.io/ALighina/ghinali/preview.jpg"></div>
     <title>Wedding Invitation</title>
 	<style>
 	/* Remove margins & padding */
@@ -386,11 +386,11 @@
 	</style>
 </head>
 <body>
-<link rel="image_src" href="https://i.imgur.com/1cGIade.jpeg">
-<link itemprop="thumbnailUrl" href="https://i.imgur.com/1cGIade.jpeg">
+<link rel="image_src" href="https://ghenaa.github.io/ALighina/ghinali/preview.jpg">
+<link itemprop="thumbnailUrl" href="https://ghenaa.github.io/ALighina/ghinali/preview.jpg">
 
 <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject">
-<link itemprop="url" href="https://i.imgur.com/1cGIade.jpeg">
+<link itemprop="url" href="https://ghenaa.github.io/ALighina/ghinali/preview.jpg">
 </span>
 <audio>
     <source src="emotional-piano-music-256262.MP3" type="audio/mpeg">
