--- a/ghinali/index.html
+++ b/ghinali/index.html
@@ -10,8 +10,8 @@
 	
 	<meta property="og:title" content="Ali & Ghina Wedding Invitation">
 <meta property="og:description" content="You're invited to celebrate with us. Tap to view the full invitation!">
-<meta property="og:image" itemprop="image" content="https://ghenaa.github.io/ALighina/ghinali/preview.jpg">
-<meta property="og:image:secure_url" itemprop="image" content="https://ghenaa.github.io/ALighina/ghinali/preview.jpg">
+<meta property="og:image" itemprop="image" content="https://ghenaa.github.io/ALighina/ghinali/preview.JPG">
+<meta property="og:image:secure_url" itemprop="image" content="https://ghenaa.github.io/ALighina/ghinali/preview.JPG">
 <meta property="og:url" content="https://ghenaa.github.io/ALighina/ghinali/">
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="en_GB" />
