--- a/ghinali/index.html
+++ b/ghinali/index.html
@@ -45,7 +45,7 @@
 	 text-align: center;
 	}
 	#aya1 { 
-    font-size: 1em; /* Increased font size */
+    font-size: 1.5em; /* Increased font size */
     letter-spacing: 1px;
     margin-bottom: 5px;
     color: #412649;
@@ -413,9 +413,9 @@
 </svg>
 		<img src="salanew21.png" alt="Flower Decoration" class="sala">
             <p class="location"><a class="location-link" 
-           href="https://maps.app.goo.gl/JbtH78bb3L4jLQWE9" 
+           href="https://maps.app.goo.gl/c4CCn4EXUwM6j7go9?g_st=com.google.maps.preview.copy" 
            target="_blank">
- ننتظركم – شاهد الموقع على خرائط Google</a>
+ Google ننتظركم – شاهد الموقع على خرائط </a>
 
         </a></p>
              <div class="countdown-container">
