--- a/ghinali/index.html
+++ b/ghinali/index.html
@@ -8,15 +8,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<meta property="og:title" content="Ali & Ghina Wedding Invitation">
-<meta property="og:description" content="You're invited to celebrate with us. Tap to view the full invitation!">
-<meta property="og:image" itemprop="image" content="https://imgur.com/a/11GYWpF">
-<meta property="og:image:secure_url" itemprop="image" content="https://imgur.com/a/11GYWpF">
-<meta property="og:url" content="https://ghenaa.github.io/ALighina/ghinali/">
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
-<meta property="og:type" content="website" />
-<meta property="og:locale" content="en_GB" />
+	<meta property="og:title" content="Ali & Ghina's Wedding Invitation 🎉" />
+  <meta property="og:description" content="You're invited to our big day! Tap to RSVP and view event details." />
+  <meta property="og:image" content="https://i.imgur.com/RWXRpSA.jpeg" />
+  <meta property="og:url" content="https://ghenaa.github.io/ALighina/ghinali/" />
+  <meta property="og:type" content="website" />
     <title>Wedding Invitation</title>
 	<style>
 	/* Remove margins & padding */
